-removed scroll and added wrap for skills -fixed navbar in tabs

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -33,7 +33,7 @@ body {
 .skill-head {
     display: flex;
     justify-content: space-around;
-    overflow-x: scroll;
+    flex-wrap: wrap;
 }
 
 .skill-box {
