--- a/src/pages/Layout/Layout.css
+++ b/src/pages/Layout/Layout.css
@@ -86,7 +86,7 @@ ul li {
         position: absolute;
         z-index: 3;
         background-color: #f5f5f5;
-        left: 20%;
+        left: 70%;
     }
 
     .hamburger {
@@ -128,5 +128,11 @@ ul li {
     #toggle:checked+.hamburger+.nav {
         top: 0;
         transform: scale(1);
+    }
+}
+
+@media screen and (max-width:376px) {
+    ul.expanded {
+        left: 20%;
     }
 }
